# megane

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  eslint.config.js  index.html  package-lock.json  package.json  plan.md  playwright.config.ts  pyproject.toml  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.docs-demo.config.ts  vite.lib.config.ts  vite.widget.config.ts  vitest.config.ts
.cargo/: config.toml
.claude/hooks/: session-start.sh
.claude/skills/: build.md  commit.md  preview.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  deploy-llm-proxy.yml  deploy.yml  docs.yml  e2e.yml  llm-prompt-eval.yml  publish-npm.yml  publish-pypi.yml  publish-vscode.yml  release-dry-run.yml  release.yml  undraft-release.yml
bench/: plot.py  run.mjs  run_server.py
bench/llm/: README.md  compare-results.mjs  dataset.ts  extract.ts  providers.ts  report.ts  runner.ts  scorer.ts  skills.ts  types.ts
bench/results/: bench_results.json  bench_server_results.json
crates/megane-core/: Cargo.toml
crates/megane-core/benches/: parsers.rs
crates/megane-core/src/: amber.rs  atomic.rs  bonds.rs  cif.rs  crystal.rs  dcd.rs  gro.rs  lammps_data.rs  lammpstrj.rs  lib.rs  mmcif.rs  mol.rs  mol2.rs  netcdf.rs  parser.rs  psf.rs  top.rs  traj.rs  trajectory.rs  xtc.rs  xyz.rs
crates/megane-python/: Cargo.toml
crates/megane-python/src/: lib.rs
crates/megane-wasm/: Cargo.toml
crates/megane-wasm/src/: lib.rs
deploy/: apprunner.yaml  deploy-aws.sh
deploy/lightsail/: .env.example  deploy-lightsail.sh  docker-compose.yml  init-letsencrypt.sh
deploy/terraform/: iam.tf  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh.tftpl  variables.tf
docs/: configuration.md  demo.md  docusaurus.config.ts  getting-started.md  index.md  package-lock.json  package.json  sidebars.ts  tsconfig.typedoc.json  typedoc.json  wasm-stub.d.ts
docs/.vitepress/: config.ts
docs/api/: index.md
docs/docs/: configuration.md  getting-started.md  introduction.md  platform-support.md
docs/gallery/: index.md
docs/guide/: cli.md  integrations.md  jupyter.md  pipeline.md  web.md
docs/plans/: test-coverage-roadmap.md
docs/scripts/: capture-widget-screenshots.mjs  convert-notebooks.sh  generate-demo-data.py  generate-python-api.py  generate-trajectory-data.py  prepare-notebooks.py  preview-docs.mjs
examples/: demo.ipynb  external_events.ipynb  pipeline.ipynb
jupyterlab-megane/: install.json  package-lock.json  package.json  tsconfig.json  tsconfig.webpack.json  webpack.config.js
jupyterlab-megane/src/: MeganeDocWidget.tsx  MeganePipelineDocWidget.tsx  factory.ts  filetypes.ts  frameStatusBar.ts  frameSubscription.ts  index.ts  megane-modules.d.ts  skillLoaderStub.ts  testHook.ts  trajectoryUtils.ts  wasmLoader.ts
jupyterlab-megane/style/: index.css
python/megane/: __init__.py  cli.py  pipeline.py  protocol.py  server.py  widget.py
screenshots/: pipeline-diagram.html
scripts/: benchmark.cjs  benchmark.py  build-wasm.mjs  capture-screenshots.mjs  demo-script.mjs  demo-video.mjs  dev-llm-proxy.sh  dev-preview.mjs  dump_snapshot.py  generate-node-reference.mjs  install-code-server.sh  profile-loading.mjs  profile-render-fps.mjs  profile-streaming.mjs  profile-trajectory-frame0.mjs  profile-trajectory.mjs  promo-video.mjs  render_1m.cjs  screenshot-page.html  screenshot.cjs  screenshot_mpl.py  setup-local.sh  smoke-render.mjs  test-gl.cjs
src/: colorSchemes.ts  constants.ts  index.tsx  lib.ts  perf.ts  testMode.ts  types.ts  vite-env.d.ts  widget.ts
src/ai/: client.ts  config.ts  pipelineSchema.ts  prompt.ts  skillLoader.ts  structureSummary.ts  validatePipeline.ts
src/assets/: demo_vectors.vec
src/components/: AnalysisPlot.tsx  AnalysisPlotsPanel.tsx  AppearancePanel.tsx  CollapsiblePanel.tsx  ErrorBoundary.tsx  MeasurementListPanel.tsx  MeasurementPanel.tsx  MeganeViewer.tsx  PerfHud.tsx  PipelineChatBox.tsx  PipelineEditor.tsx  PipelineInspector.tsx  PipelineViewer.tsx  RenderModal.tsx  SelectionGranularityToggle.tsx  SelectionInspectorPanel.tsx  ShareDialog.tsx  Sidebar.tsx  Timeline.tsx  Toolbar.tsx  Tooltip.tsx  UploadArea.tsx  Viewport.tsx  WidgetViewer.tsx  ui.tsx
src/core/: ArrowRenderer.ts  AtomMesh.ts  BondMesh.ts  CellAxesRenderer.ts  CellRenderer.ts  ImpostorAtomMesh.ts  ImpostorBondMesh.ts  LabelOverlay.ts  MoleculeRenderer.ts  WorkerPool.ts  bondSourceLogic.ts  constants.ts  decode.worker.ts  inferBondsJS.ts  labelSourceLogic.ts  protocol.ts  shaders.ts  types.ts  vectorSourceLogic.ts
src/hooks/: useAppearancePanelState.ts  useAtomSelection.ts  useBondSource.ts  useDataSource.ts  useLabelSource.ts  useMeganeLocal.ts  useMeganeWebSocket.ts  useNodeLoadHandlers.ts  useStructuralSelection.ts  useVectorSource.ts
src/logic/: bondSourceLogic.ts  convexHull.ts  labelSourceLogic.ts  vectorSourceLogic.ts
src/parsers/: inferBondsJS.ts  parse.worker.ts  parseClient.ts  parseClientSync.ts  parseCore.ts  parseMessages.ts  structure.ts  vectorChannels.ts  xtc.ts
src/pipeline/: apply.ts  builder.ts  catalog.ts  colorWriter.ts  crystal.ts  defaults.ts  execute.ts  graph.ts  inspectorQuery.ts  inspectorSync.ts  layout.ts  openFile.ts  selection.ts  serialize.ts  shareLink.ts  store.ts  storeSnapshot.ts  templates.ts  types.ts  upstream.ts  validate.ts
src/protocol/: decode.worker.ts  protocol.ts
src/renderer/: ArrowRenderer.ts  AtomMesh.ts  BondMesh.ts  CameraManager.ts  CartoonRenderer.ts  CellAxesRenderer.ts  CellRenderer.ts  FpsCounter.ts  ImpostorAtomMesh.ts  ImpostorBondMesh.ts  LabelOverlay.ts  LineRenderer.ts  MoleculeRenderer.ts  Picking.ts  PivotMarker.ts  RenderCapture.ts  (+7 more)
vscode-megane/: .gitignore  .vscodeignore  package-lock.json  package.json  tsconfig.json  vite.webview.config.ts  vscode-megane-0.1.0.vsix  vscode-megane-0.3.1.vsix  vscode-megane-0.6.0.vsix  vscode-megane-0.6.1.vsix
wasm/: Cargo.toml
(+555 files in other folders)
