[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "megane"
version = "0.1.0"
description = "A fast, beautiful molecular viewer"
requires-python = ">=3.10"
dependencies = [
    "anywidget>=0.9.0",
    "traitlets>=5.0",
    "numpy>=1.24",
    "rdkit",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
trajectory = ["MDAnalysis>=2.5"]
dev = ["pytest>=7.0", "httpx>=0.24"]

[project.scripts]
megane = "megane.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["python/megane"]
artifacts = ["python/megane/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
