[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "megane"
version = "0.1.0"
description = "A fast, beautiful molecular viewer"
requires-python = ">=3.10"
dependencies = [
    "anywidget>=0.9.0",
    "traitlets>=5.0",
    "numpy>=1.24",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "MDAnalysis>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.24"]

[project.scripts]
megane = "megane.cli:main"

[tool.maturin]
manifest-path = "crates/megane-python/Cargo.toml"
python-source = "python"
module-name = "megane.megane_parser"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
