[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "megane"
version = "0.3.2"
description = "A fast, beautiful molecular viewer"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "hodakamori" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Framework :: Jupyter",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Chemistry",
]
keywords = ["molecular", "viewer", "pdb", "jupyter", "widget", "anywidget"]
dependencies = [
    "anywidget>=0.9.0",
    "ipywidgets>=8.0.0",
    "traitlets>=5.0",
    "numpy>=1.24",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "MDAnalysis>=2.5",
]

[project.urls]
Homepage = "https://github.com/hodakamori/megane"
Repository = "https://github.com/hodakamori/megane"
Issues = "https://github.com/hodakamori/megane/issues"

[project.optional-dependencies]
traj = ["ase>=3.22"]
dev = ["pytest>=7.0", "httpx>=0.24", "pytest-cov>=4.0", "jupyterlab>=4.0"]

[project.scripts]
megane = "megane.cli:main"

[tool.maturin]
manifest-path = "crates/megane-python/Cargo.toml"
python-source = "python"
module-name = "megane.megane_parser"
features = ["pyo3/extension-module"]
include = ["python/megane/static/**", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = "--cov=megane --cov-report=term-missing --cov-report=html:coverage/python --cov-report=json:coverage/python/coverage.json"

[tool.coverage.run]
source = ["megane"]
omit = ["megane/static/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.bumpversion]
current_version = "0.3.2"
commit = false
tag = false
allow_dirty = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = "crates/megane-core/Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "crates/megane-python/Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "crates/megane-wasm/Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "python/megane/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "docs/scripts/prepare-notebooks.py"
search = 'megane v{current_version}'
replace = 'megane v{new_version}'
