[package]
name = "megane-core"
version = "0.10.0"
edition = "2021"
description = "Core molecular structure parsers (PDB, GRO, XYZ, MOL, CIF, LAMMPS, XTC, .traj)"
authors = ["hodakamori"]
license = "MIT"
repository = "https://github.com/hodakamori/megane"

[dependencies]
serde_json = "1"

[dev-dependencies]
tempfile = "3"

# Dependency-free A/B parser benchmark (std timing only, no criterion).
# Run with: cargo bench -p megane-core
[[bench]]
name = "parsers"
harness = false
