[package]
name = "megane-python"
version = "0.6.0"
edition = "2021"
description = "PyO3 Python bindings for megane molecular parsers"
authors = ["hodakamori"]
license = "MIT"
repository = "https://github.com/hodakamori/megane"

[lib]
name = "megane_parser"
crate-type = ["cdylib"]

[dependencies]
megane-core = { path = "../megane-core" }
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
