[package]
name = "megane-wasm"
version = "0.4.0"
edition = "2021"
description = "WASM bindings for megane molecular viewer"
authors = ["hodakamori"]
license = "MIT"
repository = "https://github.com/hodakamori/megane"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
megane-core = { path = "../megane-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
