[package]
name = "megane-wasm"
version = "0.9.1"
edition = "2021"
description = "WASM bindings for megane molecular viewer"
authors = ["hodakamori"]
license = "MIT"
repository = "https://github.com/hodakamori/megane"

# Run wasm-opt (binaryen) on the release build. -O3 optimizes the parser/decoder
# hot loops (e.g. XTC bit decompression) and also shrinks the shipped .wasm, so
# the module fetches + compiles faster on first load.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3']

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
megane-core = { path = "../megane-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
